Fix: check deals button shrinked on smaller screens.

--- a/src/components/Deal.module.css
+++ b/src/components/Deal.module.css
@@ -2,7 +2,7 @@
     background-color: #3b2e5a; 
     border-radius: 10px;
     margin: 15px;
-    height: 15rem;
+    height: 16rem;
 
     position: relative;
     display: flex;
@@ -28,7 +28,7 @@
 
 .title{
     text-align: center;
-    margin: 1.7rem 0;
+    margin: 1.5rem 0;
     width: 80%;
     line-height: 1.3;
     text-transform: uppercase;
@@ -72,7 +72,7 @@
 .btn_focus,
 .btn:visited{
     width: 100%;
-    height: 2rem;
+    min-height: 2rem;
     font-size: 12px;
     font-weight: 200;
     display: block;
